# housekeeper

./: CHANGELOG.md  Makefile  README.org  flake.nix  hie.yaml  housekeeper.cabal
app/: Main.hs
app/Housekeeper/: Types.hs
app/Housekeeper/App/: Env.hs  Handler.hs  Monad.hs
app/Housekeeper/Capability/: ClientRepo.hs  EventStore.hs  Logger.hs
app/Housekeeper/Data/: Appointment.hs  Client.hs  Command.hs  CommandHandler.hs  Event.hs  Todo.hs
app/Housekeeper/Effects/: ClientRepo.hs  EventStore.hs  Id.hs  Log.hs  Time.hs
app/Housekeeper/Service/: CommandDispatcher.hs
housekeeper/: hie.yaml  housekeeper.cabal
housekeeper-webclient/: package-lock.json  packages.dhall  spago.dhall
housekeeper-webclient/src/: AppM.purs  Main.purs  Route.purs  Store.purs
housekeeper-webclient/src/Api/: Endpoint.purs  Request.purs  Utils.purs
housekeeper-webclient/src/Capability/: Logger.purs  Time.purs
housekeeper-webclient/src/Capability/Repo/: Client.purs
housekeeper-webclient/src/Data/: Client.purs  Log.purs
housekeeper/src-exe/: Main.hs
housekeeper/src-lib/Housekeeper/: Main.hs
housekeeper/src-lib/Housekeeper/App/: Handler.hs
housekeeper/src-lib/Housekeeper/Capability/: EventStore.hs  Id.hs  Logger.hs  Time.hs
housekeeper/src-lib/Housekeeper/Context/: ClientManager.hs
housekeeper/test/Housekeeper/Context/: ClientManagerSpec.hs
src-exe/: Main.hs
src-lib/Housekeeper/Context/: ClientManager.hs
