cabal-version:      3.0
name:               housekeeper

version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Marco Schneider
maintainer:         marco.schneider@posteo.de
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable housekeeper
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , housekeeper
    hs-source-dirs:   src-exe
    default-language: GHC2021

library
    import:           warnings
    build-depends:    base ^>=4.16.4.0
                    , polysemy
                    , uuid
                    , postgresql-simple
                    , transformers
                    , monadIO
                    , mtl
                    , hslogger
                    , aeson
                    , text
                    , time
                    , servant
                    , servant-server
                    , warp
                    , wai-extra
                    , feed
    hs-source-dirs:   src-lib
    exposed-modules: Housekeeper.Main
                   , Housekeeper.App.Env
                   , Housekeeper.App.Monad
                   , Housekeeper.App.Handler
                   , Housekeeper.Context.ClientManager
                   , Housekeeper.Capability.Id
                   , Housekeeper.Capability.Logger
                   , Housekeeper.Capability.Time
                   , Housekeeper.Capability.EventStore
    default-language: GHC2021
    default-extensions: OverloadedStrings

