cabal-version:      3.0
name:               housekeeper
description:        Playing around with Haskell again.
version:            0.1.0.0
license:            GPL-3.0-only
author:             Marco Schneider
maintainer:         marco.schneider@posteo.de
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: GHC2021

executable housekeeper
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , housekeeper
    hs-source-dirs:   src-exe

library
    import:           warnings
    build-depends:    base ^>=4.16.4.0
                    , uuid
                    , postgresql-simple
                    , transformers
                    , monadIO
                    , mtl
                    , hslogger
                    , aeson
                    , text
                    , time
                    , servant
                    , servant-server
                    , warp
                    , wai-extra
    hs-source-dirs:  src-lib
    exposed-modules: Housekeeper.Main
                   , Housekeeper.App.Env
                   , Housekeeper.App.Monad
                   , Housekeeper.App.Handler
                   , Housekeeper.Context.ClientManager
                   , Housekeeper.Capability.Id
                   , Housekeeper.Capability.Logger
                   , Housekeeper.Capability.Time
                   , Housekeeper.Capability.EventStore
    default-extensions: OverloadedStrings
                      , DerivingStrategies
                      , DeriveAnyClass

test-suite housekeeper-test
   import: warnings
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs: test
   ghc-options: -rtsopts -with-rtsopts=-N -threaded
   build-depends: base
                , housekeeper
                , hspec
                , time
                , mtl
                , uuid
                , text
   build-tool-depends: hspec-discover:hspec-discover
   other-modules: Housekeeper.Context.ClientManagerSpec